# conspiracy-agent

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  docker-compose.yml
.claude/: settings.local.json
agent-backend/: CLAUDE.md  pyproject.toml  token_server.py
agent-starter-swift/VoiceAgent/: Info.plist  Localizable.xcstrings  VoiceAgent.xcconfig
agent-starter-swift/VoiceAgent.xcodeproj/: project.pbxproj
agent-starter-swift/VoiceAgent/Auth/: TokenService.swift
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  agent.py  pyproject.toml
backend/src/: __init__.py  agent.py  entrypoint.py
backend/src/prompts/: __init__.py  conspiracy.py
frontend/: .dockerignore  .env.example  Dockerfile  app-config.ts  eslint.config.mjs  next.config.ts
frontend/app/: globals.css
frontend/app/(app)/: layout.tsx  opengraph-image.tsx
frontend/components/: welcome.tsx
